reduced the log level to debug